Fill form width overflow possible fix pt.4

--- a/components/pages/completare-cv/FillForm.css
+++ b/components/pages/completare-cv/FillForm.css
@@ -41,6 +41,7 @@
     fieldset {
       border: none;
       margin-top: 50px;
+      max-width: 100%;
       border: 2px solid white;
 
       legend {
